--- a/application/layouts/scripts/default.phtml
+++ b/application/layouts/scripts/default.phtml
@@ -58,7 +58,7 @@ if($flash){
 
 	<div id="header">
     	<a href="/" id="logo"></a>
-        <div id="login"><?php if($this->user){ ?><a href="/user/logout">LOGOUT</a><? } else { ?><a href="/user/login">LOGIN/SIGNUP<? } ?>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">HELP</a></div>
+        <div id="login">d<a href="/user/logout">LOGOUT</a><? } else { ?><a href="/user/login">LOGIN/SIGNUP<? } ?>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">HELP</a></div>
         <div id="menu">
         	<a href="">ABOUT</a>&nbsp;&nbsp;/&nbsp;
             <a href="battle.html">BATTLE</a>&nbsp;&nbsp;/&nbsp;
