--- a/application/views/default/index/index.phtml
+++ b/application/views/default/index/index.phtml
@@ -11,7 +11,9 @@
         These ladies are on TPX, you should be too!
     </ul>
     
+    <?php if(!$this->user){ ?>
     <a href="#" id="create-account">Create an Account</a>
+    <? } ?>
     <div style="clear:both"></div>
 
     <div id="slideshow">
