--- a/application/views/default/user/login.phtml
+++ b/application/views/default/user/login.phtml
@@ -32,7 +32,7 @@
 				</fieldset>
 				<br>
 				<fieldset>
-					<input name="user_register_submit" value="Register Now" class="button small green" type="submit"/>
+					<input name="user_register_submit" value="Register Now" class="button small orange" type="submit"/>
 				</fieldset>
 			</form>
 		</div>
@@ -51,7 +51,7 @@
 				</fieldset>
 				<br>
 				<fieldset>
-					<input name="user_login_submit" value="Login to your account" class="button small orange" type="submit"/>
+					<input name="user_login_submit" value="Login to your account" class="button small red" type="submit"/>
 				</fieldset>
 			</form>
 		</div>
@@ -59,8 +59,8 @@
 		<div class="one-third-big last">
 		<h4>Already Have an Account?</h4><br/>
 		<p>
-			<a href="#" id="user_login_show" class="login_register_show button big round green">Sign In &amp; Explore!</a>
-			<a href="#" id="user_register_show" class="login_register_show hide button big round orange">Register a new account!</a>
+			<a href="#" id="user_login_show" class="login_register_show button big round orange">Sign In &amp; Explore!</a>
+			<a href="#" id="user_register_show" class="login_register_show hide button big round red">Register a new account!</a>
 		</p><br/>
 
 		<h4> -- or -- </h4><br/>
