--- a/public/css/main.css
+++ b/public/css/main.css
@@ -82,3 +82,564 @@ a {
 	text-align: right;
 	padding-top: 44px;
 }
+
+.left {
+	float:left;
+}
+.right {
+	float:right;
+}
+.one, .one-half, .two-third, .one-third, .one-fourth, .one-fifth, .one-sixth ,.inner-content, .one-third-big {
+	float:left;
+}
+.one-half, .two-third, .one-third, .one-fourth, .one-fifth, .one-sixth, .inner-content,.one-third-big  {
+	margin-right: 10px;
+}
+.one {
+	width:960px;
+}
+.one-half {
+	width:465px;
+}
+.two-third {
+	width:630px;
+}
+.one-third {
+	width:300px;
+}
+.one-third-big {
+	width:340px;
+}
+.one-fourth {
+	width:217px;
+}
+.one-fifth {
+	width:168px;
+}
+.one-sixth {
+	width:135px;
+}
+.last {
+	margin-right: 0px!important;
+}
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+
+
+
+/* Forms */
+
+label {
+	font-weight:normal;
+	display:block;
+	color:#7f7f7f;
+}
+input[type=text],input[type=password],input.text,input.title,textarea {
+	background-color:#FFF;
+	border:1px solid #ebebeb;
+	font-size:11px;
+}
+input[type=text]:focus,input[type=password]:focus,input.text:focus,input.title:focus,textarea:focus {
+	border-color:#88bbc8;
+	-moz-box-shadow: 0 0px 3px #88bbc8;
+	-webkit-box-shadow: 0 0px 3px #88bbc8;
+	box-shadow: 0 0px 3px #88bbc8;
+}
+select {
+	background-color:#fff;
+	border-width:1px;
+	border-style:solid;
+}
+input[type=text],input[type=password],input.text,input.title,textarea,select {
+	margin:5px 0;
+}
+input.text,input.title {
+	width:200px;
+	padding:5px;
+}
+input.title {
+	font-size:1.5em;
+}
+textarea {
+	width:450px;
+	height:180px;
+	padding:5px;
+}
+form.inline {
+	line-height:3;
+}
+form.inline p {
+	margin-bottom:0;
+}
+.search-input{
+	background:#FFF url("../images/search-bg.png")  right no-repeat;
+	padding:6px;
+	border-radius:3px;
+	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
+	width:200px;
+	color:#c6c6c6;
+
+}
+.search-place{
+	margin-left:25px;
+}
+.required {
+	color:#ed1c24;color:#e64135;
+}
+.required {
+	color:#ed1c24;
+}
+.error{color:#e64135;text-align:right;font-size:11px;}
+.success{color:#acd373;text-align:right;font-size:11px;}
+.simple-error,.simple-alert,.simple-notice,.simple-success,.simple-info {
+
+	padding:0.8em;
+	margin-bottom:1em;
+	border:1px solid #ddd;
+}
+.simple-error,.simple-alert {
+	background:#fbe3e4;
+	border-color:#fbc2c4;
+	color:#e64135;
+}
+.simple-notice {
+	background:#fff6bf;
+	color:#514721;
+	border-color:#ffd324;
+}
+.simple-success {
+	background:#e6efc2;
+	color:#264409;
+	border-color:#c6d880;
+}
+.simple-info {
+	background:#d5edf8;
+	color:#205791;
+	border-color:#92cae4;
+}
+.simple-error a,.simple-alert a {
+	color:#8a1f11;
+}
+.simple-notice a {
+	color:#514721;
+}
+.simple-success a {
+	color:#264409;
+}
+.simple-info a {
+	color:#205791;
+}
+#sign-up-form input,#sign-up-form select{padding:7px 10px;width:250px;border:1px solid #cccccc;}
+#sign-up-form  #Mysubmitted{width:105px!important;padding:5px 10px;border:none;color:#FFF;}
+#round-form input,#round-form select{padding:7px 10px;width:250px;border:1px solid #cccccc;border-radius:4px;-moz-border-radius:4px;-webkit-border-radius:4px;}
+#round-form input:focus,#round-form select:focus{border-color:#72c2e7;-moz-box-shadow: 0 0px 5px #72c2e7;-webkit-box-shadow: 0 0px 5px #72c2e7;box-shadow: 0 0px 5px #72c2e7;}
+
+
+/* Buttons */
+
+.button{
+	cursor:pointer;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 11px;
+	color: #ffffff;
+	text-shadow:
+		0px -1px 0px rgba(000,000,000,0.4),
+		0px 0px 0px rgba(255,255,255,0);
+	-webkit-transition:all 0.3s ease, top 0ms linear;
+	-moz-transition:all 0.3s ease;
+	-o-transition:all 0.4s ease;
+	-ms-transition:all 0.4s ease;
+	transition:all 0.3s ease;
+	border-radius: 99px;
+	-moz-border-radius: 99px;
+	-webkit-border-radius: 99px;
+
+	}
+.button.round{
+	border-radius:4px;
+	-moz-border-radius:4px;
+	-webkit-border-radius:4px;
+}
+.button.small{
+	padding: 4px 10px;
+}
+.button.big{
+	padding: 8px 20px;
+}
+.button.huge{
+	padding: 12px 24px;
+}
+/*-----------BUTTON COLORS ---------------*/
+ul.buttons li {display:list;margin:25px 0;}
+/*BLUE*/
+.button.blue{
+	background-color:#1e6fca;
+	background: -moz-linear-gradient(
+		top,
+		#65b1f0 0%,
+		#246eab);
+	background: -webkit-gradient(
+		linear, left top, left bottom,
+		from(#65b1f0),
+		to(#246eab));
+
+	border: 1px solid #275682;
+	-moz-box-shadow:
+		0px 1px 2px rgba(000,000,000,0.3),
+		inset 0px 1px 0px rgba(255,255,255,0.6);
+	-webkit-box-shadow:
+		0px 1px 2px rgba(000,000,000,0.3),
+		inset 0px 1px 0px rgba(255,255,255,0.6);
+
+	}
+	.button.blue:hover {
+	color:#FFF;
+	-webkit-box-shadow: 0px 0px 6px rgba(54, 154, 239, 0.8), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 0px 0px 6px rgba(54, 154, 239, 0.8), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	-o-box-shadow: 0px 0px 6px rgba(54, 154, 239, 0.8), 0px 0px 3px rgba(0, 0, 0, 0.4);
+	-ms-box-shadow: 0px 0px 6px rgba(54, 154, 239, 0.8), 0px 0px 3px rgba(0, 0, 0, 0.4);
+	box-shadow: 0px 0px 6px rgba(54, 154, 239, 0.8), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	}
+	.button.blue:active{
+	background: -webkit-gradient(
+		linear, left top, left bottom,
+		from(#246eab),
+		to(#65b1f0));
+	}
+/*ORANGE*/
+.button.orange{
+	background-color:#d74b23;
+	background: -moz-linear-gradient(
+		top,
+		#f27a2a 0%,
+		#c13a05);
+	background: -webkit-gradient(
+		linear, left top, left bottom,
+		from(#f27a2a),
+		to(#c13a05));
+	border: 1px solid #9f2f03;
+	background-clip: padding-box;
+	-moz-background-clip: padding;
+	-webkit-background-clip: padding;
+
+	}
+	.button.orange:hover {
+	color:#FFF;
+	-webkit-box-shadow: 0px 0px 6px rgba(171, 63, 10, 0.8), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 0px 0px 6px rgba(171, 63, 10, 0.8), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	-o-box-shadow: 0px 0px 6px rgba(171, 63, 10, 0.8), 0px 0px 3px rgba(0, 0, 0, 0.4);
+	-ms-box-shadow: 0px 0px 6px rgba(171, 63, 10, 0.8), 0px 0px 3px rgba(0, 0, 0, 0.4);
+	box-shadow: 0px 0px 6px rgba(171, 63, 10, 0.8), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	}
+	.button.orange:active{
+	background: -webkit-gradient(
+		linear, left top, left bottom,
+		from(#c13a05),
+		to(#f27a2a));
+	}
+
+/*GREEN*/
+.button.green{
+	background-color:#85cd4d;
+	background: -moz-linear-gradient(
+		top,
+		#a6df57 0%,
+		#6ca314);
+	background: -webkit-gradient(
+		linear, left top, left bottom,
+		from(#a6df57),
+		to(#6ca314));
+	border: 1px solid #71af1e;
+	background-clip: padding-box;
+	-moz-background-clip: padding;
+	-webkit-background-clip: padding;
+
+	}
+	.button.green:hover {
+	color:#FFF;
+	-webkit-box-shadow: 0px 0px 6px rgba(107, 170, 4, 0.8), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 0px 0px 6px rgba(107, 170, 4, 0.8), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	-o-box-shadow: 0px 0px 6px rgba(107, 170, 4, 0.8), 0px 0px 3px rgba(0, 0, 0, 0.4);
+	-ms-box-shadow: 0px 0px 6px rgba(107, 170, 4, 0.8), 0px 0px 3px rgba(0, 0, 0, 0.4);
+	box-shadow: 0px 0px 6px rgba(107, 170, 4, 0.8), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	}
+	.button.green:active{
+	background: -webkit-gradient(
+		linear, left top, left bottom,
+		from(#6ca314),
+		to(#a6df57));
+	}
+
+/*PINK*/
+.button.pink{
+	background-color:#d82f4e;
+	background: -moz-linear-gradient(
+		top,
+		#f3546e 0%,
+		#c92644);
+	background: -webkit-gradient(
+		linear, left top, left bottom,
+		from(#f3546e),
+		to(#c92644));
+	border: 1px solid #841e31;
+	background-clip: padding-box;
+	-moz-background-clip: padding;
+	-webkit-background-clip: padding;
+	}
+	.button.pink:hover {
+	color:#FFF;
+	-webkit-box-shadow: 0px 0px 6px rgba(244, 39, 78, 0.8), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 0px 0px 6px rgba(244, 39, 78, 0.8), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	-o-box-shadow: 0px 0px 6px rgba(244, 39, 78, 0.8), 0px 0px 3px rgba(0, 0, 0, 0.4);
+	-ms-box-shadow: 0px 0px 6px rgba(244, 39, 78, 0.8), 0px 0px 3px rgba(0, 0, 0, 0.4);
+	box-shadow: 0px 0px 6px rgba(244, 39, 78, 0.8), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	}
+	.button.pink:active{
+	background: -webkit-gradient(
+		linear, left top, left bottom,
+		from(#c92644),
+		to(#f3546e));
+}
+/*BLACK*/
+.button.black{
+	background-color:#323232;
+
+	background: -moz-linear-gradient(
+		top,
+		#545557 0%,
+		#1e1e1e);
+	background: -webkit-gradient(
+		linear, left top, left bottom,
+		from(#545557),
+		to(#1e1e1e));
+	-moz-box-shadow:
+		0px 1px 2px rgba(000,000,000,0.3),
+		inset 0px 1px 0px rgba(255,255,255,0.4);
+	-webkit-box-shadow:
+		0px 1px 2px rgba(000,000,000,0.3),
+		inset 0px 1px 0px rgba(255,255,255,0.4);
+	border: 1px solid #030303;
+	background-clip: padding-box;
+	-moz-background-clip: padding;
+	-webkit-background-clip: padding;
+	}
+	.button.black:hover {
+	color:#FFF;
+	-webkit-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	-o-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.4);
+	-ms-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.4);
+	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	}
+	.button.black:active{
+	background: -webkit-gradient(
+		linear, left top, left bottom,
+		from(#1e1e1e),
+		to(#545557));
+}
+/*YELLOW*/
+.button.yellow{
+	background-color:#f5eb34;
+	background: -moz-linear-gradient(
+		top,
+		#f8c100 0%,
+		#b68e00);
+	background: -webkit-gradient(
+		linear, left top, left bottom,
+		from(#f8c100),
+		to(#b68e00));
+	-moz-box-shadow:
+		0px 1px 2px rgba(000,000,000,0.3),
+		inset 0px 1px 0px rgba(255,255,255,0.4);
+	-webkit-box-shadow:
+		0px 1px 2px rgba(000,000,000,0.3),
+		inset 0px 1px 0px rgba(255,255,255,0.4);
+	border: 1px solid #b68e00;
+	background-clip: padding-box;
+	-moz-background-clip: padding;
+	-webkit-background-clip: padding;
+	}
+	.button.yellow:hover {
+	color:#FFF;
+	-webkit-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	-o-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.4);
+	-ms-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.4);
+	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	}
+	.button.yellow:active{
+	background: -webkit-gradient(
+		linear, left top, left bottom,
+		from(#b68e00),
+		to(#f8c100));
+}
+/*RED*/
+.button.red{
+	background-color:#f5eb34;
+	background: -moz-linear-gradient(
+		top,
+		#f26c4f 0%,
+		#d81f27);
+	background: -webkit-gradient(
+		linear, left top, left bottom,
+		from(#f26c4f),
+		to(#d81f27));
+	-moz-box-shadow:
+		0px 1px 2px rgba(000,000,000,0.3),
+		inset 0px 1px 0px rgba(255,255,255,0.4);
+	-webkit-box-shadow:
+		0px 1px 2px rgba(000,000,000,0.3),
+		inset 0px 1px 0px rgba(255,255,255,0.4);
+	border: 1px solid #bf0101;
+	background-clip: padding-box;
+	-moz-background-clip: padding;
+	-webkit-background-clip: padding;
+	}
+	.button.red:hover {
+	color:#FFF;
+	-webkit-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	-o-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.4);
+	-ms-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.4);
+	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	}
+	.button.red:active{
+	background: -webkit-gradient(
+		linear, left top, left bottom,
+		from(#d81f27),
+		to(#f26c4f));
+}
+/*PURPLE*/
+.button.purple{
+	background-color:#b576ad;
+	background: -moz-linear-gradient(
+		top,
+		#b576ad 0%,
+		#9a4d90);
+	background: -webkit-gradient(
+		linear, left top, left bottom,
+		from(#b576ad),
+		to(#9a4d90));
+	-moz-box-shadow:
+		0px 1px 2px rgba(000,000,000,0.3),
+		inset 0px 1px 0px rgba(255,255,255,0.4);
+	-webkit-box-shadow:
+		0px 1px 2px rgba(000,000,000,0.3),
+		inset 0px 1px 0px rgba(255,255,255,0.4);
+	border: 1px solid #954eae;
+	background-clip: padding-box;
+	-moz-background-clip: padding;
+	-webkit-background-clip: padding;
+	}
+	.button.purple:hover {
+	color:#FFF;
+	-webkit-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	-o-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.4);
+	-ms-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.4);
+	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	}
+	.button.purple:active{
+	background: -webkit-gradient(
+		linear, left top, left bottom,
+		from(#9a4d90),
+		to(#b576ad));
+}
+/*DARK BLUE*/
+.button.dark-blue{
+	background-color:#b576ad;
+	background: -moz-linear-gradient(
+		top,
+		#748095 0%,
+		#3d4753);
+	background: -webkit-gradient(
+		linear, left top, left bottom,
+		from(#748095),
+		to(#3d4753));
+	-moz-box-shadow:
+		0px 1px 2px rgba(000,000,000,0.3),
+		inset 0px 1px 0px rgba(255,255,255,0.4);
+	-webkit-box-shadow:
+		0px 1px 2px rgba(000,000,000,0.3),
+		inset 0px 1px 0px rgba(255,255,255,0.4);
+	border: 1px solid #3d4753;
+	background-clip: padding-box;
+	-moz-background-clip: padding;
+	-webkit-background-clip: padding;
+	}
+	.button.dark-blue:hover {
+	color:#FFF;
+	-webkit-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	-o-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.4);
+	-ms-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.4);
+	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.1),;
+	}
+	.button.dark-blue:active{
+	background: -webkit-gradient(
+		linear, left top, left bottom,
+		from(#3d4753),
+		to(#748095));
+}
+/*LIGHT BLUE*/
+.button.light-blue{
+
+	background-color:#7ccce5;
+	background: -moz-linear-gradient(
+		top,
+		#7ccce5 0%,
+		#64bcd7);
+	background: -webkit-gradient(
+		linear, left top, left bottom,
+		from(#7ccce5),
+		to(#64bcd7));
+	-moz-box-shadow:
+		0px 1px 2px rgba(000,000,000,0.3),
+		inset 0px 1px 0px rgba(255,255,255,0.4);
+	-webkit-box-shadow:
+		0px 1px 2px rgba(000,000,000,0.3),
+		inset 0px 1px 0px rgba(255,255,255,0.4);
+	border: 1px solid #52adc9;
+	background-clip: padding-box;
+	-moz-background-clip: padding;
+	-webkit-background-clip: padding;
+	}
+	.button.light-blue:hover {
+	color:#FFF;
+	-webkit-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	-o-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.4);
+	-ms-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.4);
+	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4), 0px 0px 3px rgba(0, 0, 0, 0.1);
+	}
+	.button.light-blue:active{
+	background: -webkit-gradient(
+		linear, left top, left bottom,
+		from(#64bcd7),
+		to(#7ccce5));
+}
+/*BUTTON ENDS*/
