changed login form

--- a/application/views/default/index/index.phtml
+++ b/application/views/default/index/index.phtml
@@ -1,3 +1,5 @@
+	<link href="/css/home.css" rel="stylesheet" type="text/css" />
+
     <ul id="avatars">
     	<li><a href=""><img src="images/avatars/ava1.jpg" /></a></li>
         <li><a href=""><img src="images/avatars/ava2.jpg" /></a></li>
@@ -12,7 +14,7 @@
     </ul>
     
     <?php if(!$this->user){ ?>
-    <a href="#" id="create-account">Create an Account</a>
+    <a href="/user/login" id="create-account">Create an Account</a>
     <? } ?>
     <div style="clear:both"></div>
 
