--- a/application/layouts/scripts/default.phtml
+++ b/application/layouts/scripts/default.phtml
@@ -15,6 +15,8 @@
 <script type="text/javascript" src="/js/openid-jquery.js"></script>
 <script type="text/javascript" src="/js/openid-en.js"></script>
 <script type="text/javascript" src="/js/jien.js"></script>
+<script type="text/javascript" src="http://use.typekit.com/rcd0yyh.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 <script type="text/javascript" src="/themes/adventure/js/easing/jquery.easing.1.3.js"></script>
 <script type="text/javascript" src="/themes/adventure/js/kwicks/jquery.kwicks-1.5.1.pack.js"></script>
 <script type="text/javascript" src="/themes/adventure/js/swfobject/swfobject.js"></script>
@@ -60,7 +62,7 @@ if($flash){
         <div id="login"><?php if($this->user){ ?><a href="/user/logout">LOGOUT</a><? } else { ?><a href="/user/login">LOGIN/SIGNUP<? } ?>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">HELP</a></div>
         <div id="menu">
         	<a href="">ABOUT</a>&nbsp;&nbsp;/&nbsp;
-            <a href="battle.html">BATTLE</a>&nbsp;&nbsp;/&nbsp;
+            <a href="/battle">BATTLE</a>&nbsp;&nbsp;/&nbsp;
             <a href="">LEARN</a>&nbsp;&nbsp;/&nbsp;
             <a href="">OUR LADIES</a>
         </div>
