--- a/application/views/default/user/login.phtml
+++ b/application/views/default/user/login.phtml
@@ -18,11 +18,11 @@
 				</fieldset>
 				<fieldset>
 					<label>Email <span class="required">*</span></label>
-					<input type="text" name="username" id="register_username" value="" class="text requiredField email" />
+					<input type="text" name="email" id="register_username" value="" class="text requiredField email" />
 				</fieldset>
 				<fieldset>
 					<label>Screen name <span class="required">*</span></label>
-					<input type="text" name="screen_name" id="register_screen_name" value="" class="text requiredField" />
+					<input type="text" name="username" id="register_screen_name" value="" class="text requiredField" />
 				</fieldset>
 				<fieldset>
 					<label>Password<span class="required">*</span></label>
