--- a/application/views/default/user/login.phtml
+++ b/application/views/default/user/login.phtml
@@ -23,11 +23,11 @@
 			<input type="hidden" name="redir" value="/">
 			<fieldset>
 				<label>Email <span class="required">*</span></label>
-				<input type="text" name="email" id="register_username" value="" class="text requiredField email" />
+				<input type="text" name="email" id="login_email" value="" class="text requiredField email" />
 			</fieldset>
 			<fieldset>
 				<label>Password<span class="required">*</span></label>
-				<input type="password" name="password" id="login_password" value="" class="text requiredField subject"/>
+				<input type="password" name="password" id="login_password" value="" class="text requiredField"/>
 			</fieldset>
 			<br>
 			<fieldset>
@@ -48,11 +48,11 @@
 		</fieldset>
 		<fieldset>
 			<label>Email <span class="required">*</span></label>
-			<input type="text" name="username" id="register_username" value="" class="text requiredField email" />
+			<input type="text" name="email" id="register_email" value="" class="text requiredField email" />
 		</fieldset>
 		<fieldset>
 			<label>Screen name <span class="required">*</span></label>
-			<input type="text" name="email" id="register_username" value="" class="text requiredField email" />
+			<input type="text" name="username" id="register_username" value="" class="text requiredField email" />
 		</fieldset>
 		<fieldset>
 			<label>Password<span class="required">*</span></label>
