--- a/application/views/default/user/complete-registration.phtml
+++ b/application/views/default/user/complete-registration.phtml
@@ -20,15 +20,15 @@
 				</fieldset>
 				<fieldset>
 					<label>Email <span class="required">*</span></label>
-					<input type="text" name="username" id="register_username" value="" class="text requiredField email" />
+					<input type="text" name="email" id="register_email" value="" class="text requiredField email" />
 				</fieldset>
 				<fieldset>
 					<label>Pick a screen name<span class="required">*</span></label>
-					<input type="text" name="screen_name" id="screen_name" value="" class="text requiredField subject" />
+					<input type="text" name="username" id="register_username" value="" class="text requiredField subject" />
 				</fieldset>
 				<br>
 				<fieldset>
-					<input name="user_register_submit" value="Register Now" class="button small orange" type="submit" />
+					<input name="user_register_submit" value="Create account" class="button small orange" type="submit" />
 				</fieldset>
 			</form>
 		</div>
