--- a/application/views/default/user/login.phtml
+++ b/application/views/default/user/login.phtml
@@ -7,7 +7,7 @@
     });
 </script>
 
-<div class="one-half">
+<div style="width:450px;float:left;height:500px;">
 	<h4>Use your existing services</h4>
 	<form action="<?php echo $this->baseUrl('/user/login');?>" method="get" id="openid_form">
 		<p><a href="javascript:openid.signin('facebook');"><img src="/images/login/facebook.png"></a></p>
@@ -15,7 +15,11 @@
 	</form>
 </div>
 
-<div class="one-half">
+<div style="color:#444;width:60px;float:left;font-size:24px;height:400px;padding-top:100px;text-align:center;font-weight:bold;">
+	or
+</div>
+
+<div style="width:450px;float:left;height:500px;">
 	
 	<div id="user_login" class="hide login_register">
 		<h4>Use your TPX account</h4>
