--- a/application/views/default/layouts/default.phtml
+++ b/application/views/default/layouts/default.phtml
@@ -61,9 +61,9 @@ if($flash){
     	<a href="/" id="logo"></a>
         <div id="login"><?php if($this->user){ ?><a href="/user/logout">LOGOUT</a><? } else { ?><a href="/user/login">LOGIN/SIGNUP<? } ?>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">HELP</a></div>
         <div id="menu">
-        	<a href="">ABOUT</a>&nbsp;&nbsp;/&nbsp;
-            <a href="/battle">BATTLE</a>&nbsp;&nbsp;/&nbsp;
-            <a href="">LEARN</a>&nbsp;&nbsp;/&nbsp;
+        	<a href="">ABOUT</a><div class="menu-sep">/</div>
+            <a href="/battle">BATTLE</a><div class="menu-sep">/</div>
+            <a href="">LEARN</a><div class="menu-sep">/</div>
             <a href="">OUR LADIES</a>
         </div>
     </div>
