--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,8 +2,11 @@
 /* Basic and Header Styles */
 
 h1,h2,h3,h4,h5,#battle-compare, .battle-username, #start-your-profile, .battle-stats, .widget h2, .rightcol h3, .middlecol, #login, #create-account,.home-question-top,.home-question,.home-question-stat,.home-question-answer,#twitter-header-title,.footer-list strong {
-	font-family: nimbus-sans,sans-serif;
+	font-family: depot-new-web,sans-serif;
 	font-style: normal;
+	font-weight: 500;
+}
+.middlecol span {
 	font-weight: 700;
 }
 body {
