--- a/application/views/default/user/login.phtml
+++ b/application/views/default/user/login.phtml
@@ -7,7 +7,7 @@
     });
 </script>
 
-<div style="width:450px;float:left;height:500px;">
+<div style="width:300px;padding-left:130px;float:left;height:500px;">
 	<h4>Use your existing services</h4>
 	<form action="<?php echo $this->baseUrl('/user/login');?>" method="get" id="openid_form">
 		<p><a href="javascript:openid.signin('facebook');"><img src="/images/login/facebook.png"></a></p>
@@ -15,11 +15,11 @@
 	</form>
 </div>
 
-<div style="color:#444;width:60px;float:left;font-size:24px;height:400px;padding-top:100px;text-align:center;font-weight:bold;">
+<div style="color:#444;width:100px;float:left;font-size:24px;height:400px;padding-top:100px;text-align:left;font-weight:bold;">
 	or
 </div>
 
-<div style="width:450px;float:left;height:500px;">
+<div style="width:430px;float:left;height:500px;">
 	
 	<div id="user_login" class="hide login_register">
 		<h4>Use your TPX account</h4>
@@ -30,7 +30,7 @@
 				<input type="text" name="email" id="login_email" value="" class="text requiredField email" />
 			</fieldset>
 			<fieldset>
-				<label>Password<span class="required">*</span></label>
+				<label>Password <span class="required">*</span></label>
 				<input type="password" name="password" id="login_password" value="" class="text requiredField"/>
 			</fieldset>
 			<br>
@@ -59,11 +59,11 @@
 			<input type="text" name="username" id="register_username" value="" class="text requiredField email" />
 		</fieldset>
 		<fieldset>
-			<label>Password<span class="required">*</span></label>
+			<label>Password <span class="required">*</span></label>
 			<input type="password" name="password" id="password" value="" class="text requiredField subject" />
 		</fieldset>
 		<fieldset>
-			<label>Password (Again)<span class="required">*</span></label>
+			<label>Password (Again) <span class="required">*</span></label>
 			<input type="password" name="password2" id="password2" value="" class="text requiredField subject" />
 		</fieldset>
 		<br>
