--- a/application/views/default/user/login.phtml
+++ b/application/views/default/user/login.phtml
@@ -44,7 +44,7 @@
 	<div id="user_register" class="login_register">
 	<h4>Register a new TPX account</h4>
 	<form action="/auth/register" id="register_form" method="post">
-		<input type="hidden" name="redir" value="/user/registrationCompleted">
+		<input type="hidden" name="redir" value="/">
 		<fieldset>
 			<label>Are you looking to be a TPX girl or a standard user? <span class="required">*</span></label>
 			<input type="radio" name="user_type" value="standard" class="radio requiredField" checked /> &nbsp; Standard user<br />
