--- a/application/views/default/user/login.phtml
+++ b/application/views/default/user/login.phtml
@@ -47,8 +47,8 @@
 		<input type="hidden" name="redir" value="/">
 		<fieldset>
 			<label>Are you looking to be a TPX girl or a standard user? <span class="required">*</span></label>
-			<input type="radio" name="user_type" value="standard" class="radio requiredField" checked /> &nbsp; Standard user<br />
-			<input type="radio" name="user_type" value="tpx_girl" class="radio requiredField" /> &nbsp; TPX girl
+			<input type="radio" name="role_id" value="2" class="radio requiredField" checked /> &nbsp; Standard user<br />
+			<input type="radio" name="role_id" value="3" class="radio requiredField" /> &nbsp; TPX girl
 		</fieldset>
 		<fieldset>
 			<label>Email <span class="required">*</span></label>
