--- a/application/views/default/user/login.phtml
+++ b/application/views/default/user/login.phtml
@@ -56,7 +56,7 @@
 		</fieldset>
 		<fieldset>
 			<label>Screen name <span class="required">*</span></label>
-			<input type="text" name="username" id="register_username" value="" class="text requiredField email" />
+			<input type="text" name="screenname" id="register_username" value="" class="text requiredField email" />
 		</fieldset>
 		<fieldset>
 			<label>Password <span class="required">*</span></label>
