forgot password link

--- a/application/views/default/user/login.phtml
+++ b/application/views/default/user/login.phtml
@@ -37,6 +37,7 @@
 			<fieldset>
 				<input name="user_login_submit" value="Login" class="button small red" type="submit"/>
 			</fieldset>
+			<a href="/user/forgot">Forgot your password?</a><br />
 			<a href="#" id="user_register_show" class="login_register_show hide">Create new TPX account</a>
 		</form>
 	</div>
