--- a/application/views/default/user/profile.phtml
+++ b/application/views/default/user/profile.phtml
@@ -10,9 +10,9 @@
 
 
 
-<div style="clear:both;padding: 30px; 29px; background-color: black;">
+<div style="clear:both;padding:30px 29px;width:360px;background-color:black;">
 
-	<img src="<?php echo $this->profile_image_url; ?>" />
+	<img src="<?php echo $this->profile_image_url; ?>" style="width:200px;height:300px;" />
 	
 	<?php echo $this->user['first_name'] . ' ' . substr($this->user['last_name'], 0,1);?>
 	
