test update profile method available

--- a/application/views/default/user/profile.phtml
+++ b/application/views/default/user/profile.phtml
@@ -6,9 +6,7 @@
         openid.setDemoMode(false); //Stops form submission for client javascript-only test purposes
     });
 </script>
-
-
-
+<?php Jien::debug($this->User);?>
 
 <div style="clear:both;padding:30px 29px;width:360px;background-color:black;">
 
