--- a/public/css/main.css
+++ b/public/css/main.css
@@ -701,6 +701,9 @@ ul.buttons li {display:list;margin:25px 0;}
 
 #profile ul li span { display:block; }
 
-#profile ul li input { display: none; height: 14px; font-size: 12px; padding: 2px 3px; border: none; }
+#profile ul li input, #profile h2 input, .twitter-link input { margin: 0; display: none; font-size: 10px; padding: 3px 3px; border: none; }
+
+#profile .blurb textarea { display:none; font-size: 12px; border: none; height: 3em; width: 125px; font-family: Arial, Helvetica, sans-serif; }
 
 #profile .utility { position:absolute; right:10px; top:10px; font-size:12px; font-style:italic;cursor: pointer; color: white; }
+
