working on profile view

--- a/application/views/default/user/profile.phtml
+++ b/application/views/default/user/profile.phtml
@@ -80,7 +80,10 @@
 		</ul>
 		<div style="clear:both"></div>
 	</div>
+	<img src="/images/mock2.png" />
 </div>
+
+<img src="/images/mock1.png" style="margin-left:19px" />
 
 <script type="text/javascript">
 $(document).ready(function() { 
@@ -123,7 +126,6 @@ $(document).ready(function() {
 				if(res[0] != 0) {
 					
 				}
-				console.log(res);
 			});
 			$(this).text('Edit Profile');
 			$.each($("#profile ul li"), function(k,v) {
