working on profile view

--- a/application/views/default/layouts/default.phtml
+++ b/application/views/default/layouts/default.phtml
@@ -24,6 +24,7 @@
 <script src="/js/plugins/toastmessage/jquery.toastmessage.js" type="text/javascript"></script>
 <link rel="stylesheet" href="/js/plugins/toastmessage/css/jquery.toastmessage.css">
 
+<script type="text/javascript" src="http://fast.fonts.com/jsapi/4d3f295e-fe69-43e6-ad37-bfceb79a2f08.js"></script>
 
 <script>
 var twitter_id = "<?php echo TWITTER_ID; ?>";
