--- a/application/views/default/user/profile.phtml
+++ b/application/views/default/user/profile.phtml
@@ -13,7 +13,7 @@
 		<?php if ($this->me == true) { ?>
 		<div class="utility edit">Edit Profile</div>
 		<?php } ?>
-		<img src="<?php echo $this->profile_image_url; ?>" style="width:200px;height:300px;margin: 0 23px 26px 0;float:left;" />
+		<img src="<?php echo $this->profile_image_url; ?>" />
 		<h1><?php echo $this->User['screenname']; ?></h1>
 		<h2>
 			<span><?php echo $this->User['age']; ?></span>
